--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,13 @@
 language: go
-go:
-  - 1.8
+
+matrix:
+  include:
+    - go: 1.0
+    - go: 1.1
+    - go: 1.2
+    - go: 1.3
+    - go: 1.4
+    - go: 1.5
+    - go: 1.6
+    - go: 1.7
+    - go: tip
